# Music_marketplace

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.py
api/: database.py  fastapi_app.py  login.py  login_token.txt  models.py  my_database.db  products.py  token_handler.py
db/: database.db  main.py  message.py  models.py  product.py  support_chat_session.py  user.py
frontend/: cart.py  cookies.py  database.py  fastapi_app.py  login.py  main.py  my_database.db  products_handler.py  register.py  requests_to_api.py  user.py
frontend/html/: cart.html  layout.html  main.html  support_chat.html  user.html
html/: cart.html  login.html  main.html  register.html  support_chat.html  support_page.html  user.html
models/: message.py  products.py  support_chat_session.py  user.py
routers/: cart.py  depends.py  login.py  main.py  product.py  products_handler.py  register.py  support_chat.py  support_page.py  user.py
servises/: token_handler.py
ws_managers/: support.py  user.py
